# OPay-python

./: README.md  pyproject.toml
src/opay-python/: opay_client.py
src/opay_python/: __init__.py  util.py
tests/: test.py
