[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opay-python"
version = "0.0.2"
authors = [
  { name="isaacrobert33", email="isaacrobertoluwaseun@gmail.com" },
]
description = "A Python client for OPay API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/isaacrobert33/OPay-python"
"Bug Tracker" = "https://github.com/isaacrobert33/OPay-python/issues"